# AgentJax

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TASK.md  TASK_ARCHIVE.md
docs/: ARCHITECTURE_ENTRYPOINT.md  CHANNELS_DAEMON_CLIENT_SPEC.md  CONFIG_MANAGER_SPEC.md  CORE_OBJECT_MODEL.md  DAEMON_API_IPC_SCHEMA.md  DB_SCHEMA_MULTI_SESSION_LCM.md  EVENT_TASK_LCM_RUNTIME.md  FILE_TOOLS_SPEC.md  IMPLEMENTATION_ROADMAP.md  LCM_CONTEXT_ENGINE.md  MVP_PLAN.md  PLUGIN_REFACTOR_PLAN.md  PLUGIN_SDK.md  PROMPT_ASSEMBLY_SPEC.md  RAG_KNOWLEDGE_MEMORY_SPEC.md  RETRIEVAL_TOOL_SPEC.md  RIG_ALIGNMENT.md  RUNTIME_CONTROL_TOOL_SPEC.md  SESSION_EVENT_PERSISTENCE_SPEC.md  SHELL_TOOL_SPEC.md  STRUCTURED_TOOL_CALLING_SPEC.md  USAGE_BILLING_SCHEDULER_NODE_SPEC.md  WORKSPACE_AND_CONFIG_SPEC.md
docs/references/: LCM_2026_lossless_context_management.txt
src/: app.rs  bootstrap.rs  lib.rs  main.rs  surface.rs  test_support.rs
src/api/: envelope.rs  error.rs  ids.rs  methods.rs  mod.rs
src/builtin/: mod.rs
src/cli/: mod.rs  tui.rs
src/config/: loader.rs  mod.rs  paths.rs  provider.rs  runtime.rs  workspace.rs
src/context_engine/: assembler.rs  compactor.rs  engine.rs  event_store.rs  expander.rs  mod.rs  persistence.rs  projection_store.rs  prompt.rs  resume.rs  schema.rs
src/core/: errors.rs  event_bus.rs  hook_bus.rs  mod.rs  persistence.rs  plugin.rs  plugin_manager.rs  registry.rs  reload.rs  resource_registry.rs  runtime.rs  workspace_runtime.rs
src/daemon/: ledger_store.rs  mod.rs  node_registry.rs  schedule_store.rs  service.rs  store.rs  task_store.rs
src/domain/: agent.rs  (+20 more)
(+64 files in other folders)
