[package]
name = "agentjax"
version = "0.1.0"
edition = "2021"
[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp"] }
jsonschema = "0.18"
libc = "0.2"
ratatui = "0.29"
rig-core = "0.34.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "io-util", "sync", "time"] }
tokio-tungstenite = "0.24"
toml = "0.8"
unicode-width = "0.1"
